# mysphinx-forge

./: .gitignore  AGENTS.md  README.md  data_sampling_pipeline.py  eval_excel_with_baize.py  eval_result.csv  excel_kmeans_clustering.py  fill_labels_from_api.py  generate_mocked_questions.py  main.py  mocked_questions.csv  mocked_questions_查持仓.csv  pyproject.toml  query_category_result.csv
data/: eval_result.csv  input.xlsx  input_cleaned.xlsx  input_deduplicated.meta.json  input_deduplicated.xlsx  input_deduplicated_clustered.meta.json  input_deduplicated_clustered.xlsx  input_deduplicated_clustered_analysis.csv  input_deduplicated_clustered_clusters.csv  input_deduplicated_clustered_projection.csv  input_deduplicated_clustered_report.html  input_deduplicated_matches.csv  labeld_result.csv  log1.xlsx  merged_queries.xlsx  model_test.xlsx  model_test_model_tested.xlsx  repro_17541.xlsx  repro_17541_deduplicated.meta.json  repro_17541_deduplicated.xlsx  repro_17541_deduplicated_matches.csv  sampled_for_annotation.csv  sampled_for_annotation_stats.json
data_process/: cleaning.py  cli.py  cluster_reporting.py  clustering.py  deduplication.py  embedding.py  file_io.py  logging_utils.py  progress.py  semantic_deduplication.py
models/: README.md
mysphinx_forge/: __init__.py  cli.py  cluster_labeling.py  cluster_reporting.py  clustering.py  model_testing.py
tests/: test_cleaning.py  test_cli.py  test_cluster_labeling.py  test_cluster_reporting.py  test_clustering.py  test_deduplication.py  test_file_io.py  test_semantic_deduplication.py
