[project]
name = "data-process"
version = "0.1.0"
description = "Small data processing toolkit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "sentence-transformers>=5.1.0",
    "tqdm>=4.67.1",
    "xlrd>=2.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
