[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mysphinx-forge"
version = "0.1.0"
description = "Data and model workflow toolkit for cleaning, clustering, generation, and evaluation"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["data-cleaning", "deduplication", "clustering", "nlp", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
]
dependencies = [
    "faiss-cpu>=1.11.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "sentence-transformers>=5.1.0",
    "tqdm>=4.67.1",
    "xlrd>=2.0.1",
]

[project.scripts]
mysphinx-forge = "mysphinx_forge.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.setuptools.packages.find]
include = ["mysphinx_forge*"]
